Implementando JS no menu

--- a/assets/css/estilos.css
+++ b/assets/css/estilos.css
@@ -38,6 +38,14 @@ body {
     background-color: #15191C;
     width:75vw;
     height: 100vh;
+    position: absolute;
+    left: -100vw;
+    transition: .50;
+}
+
+.menu-lateral--ativo {
+    left: 0;
+    transition: .50;
 }
 
 .menu-lateral__logo {
