--- a/assets/css/estilos.css
+++ b/assets/css/estilos.css
@@ -119,30 +119,38 @@ body {
 
 .cartao__conteudo {
     padding: 16px;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+}
+
+.cartao__destaque {
+    grid-column: span 2;
 }
 
 .cartao__titulo {
     font-size: 1.2rem;
     font-weight: 700;
+    grid-column: span 2;
 }
 
 .cartao__perfil {
     color: #95999C;
     font-size: 0.9rem;
+    grid-column: span 2;
 }
 
 .cartao__info {
-    display:flex;
+    display: flex;
     align-items: center;
     color: #95999C;
 }
 
-.cartao__info--tempo {
+.cartao__info--tempo::before {
     content: "\e90c";
     margin-right:8px;
 }
 
-.cartao__info--vizualizacao {
+.cartao__info--vizualizacao::before {
     content: "\e90f";
     margin-right:8px;
 }
@@ -158,13 +166,14 @@ body {
     font-size: 0.9rem;
 }
 
-.cartao__botao--play  {
+.cartao__botao--play::before  {
     content: "\e90b";
     font-size: 24px;
 }
 
 .cartao__botao--destaque {
     width: 100%;
+    grid-column: span 2;
 }
 
 .cartao__botao--destaque::before {
