--- a/assets/css/estilos.css
+++ b/assets/css/estilos.css
@@ -112,6 +112,11 @@ body {
     font-weight: 700;
 }
 
+.titulo-secao {
+    font-size: 1.2rem;
+    font-weight: 700;
+}
+
 .cartao {
     width: 100%;
     border-radius: 15px;
@@ -171,6 +176,7 @@ body {
     height: 40px;
     border-radius: 10px;
     font-size: 0.9rem;
+    justify-self: flex-end;
 }
 
 .cartao__botao--play::before  {
@@ -185,4 +191,9 @@ body {
 
 .cartao__botao--destaque::before {
     margin-right: 8px;
+}
+
+.secao {
+    display: grid;
+    gap: 16px;
 }
