--- a/assets/css/estilos.css
+++ b/assets/css/estilos.css
@@ -9,7 +9,7 @@ body {
     color: #FFFFFF;
 }
 
-@media screen and (min-width: 1440px){
+@media screen and (min-width: 1440px) {
     body {
         display: grid;
         grid-template-columns: auto 1fr;
@@ -90,35 +90,35 @@ body {
         color: #FFFFFF;
         font-size: 1.5rem;
     }
-
 }
 
 .menu-lateral {
     display: flex;
     flex-direction: column;
     background-color: #15191C;
-    width:75vw;
+    width: 75vw;
     height: 100vh;
+
     position: absolute;
     left: -100vw;
-    transition: .50;
+    transition: .25s;
 }
 
 .menu-lateral--ativo {
     left: 0;
-    transition: .50;
+    transition: .25s;
 }
 
 .menu-lateral__logo {
-    align-self: center;
     width: 118px;
+    align-self: center;
     padding: 16px;
 }
 
 .menu-lateral__link {
-    height:64px;
-    color:#95999C;
-    padding-left:64px;
+    height: 64px;
+    color: #95999C;
+    padding-left: 64px;
     display: flex;
     align-items: center;
 }
@@ -130,10 +130,10 @@ body {
 }
 
 .menu-lateral__link::before {
-    content: "";
+    content: "\e900";
     width: 24px;
     height: 24px;
-    font-size:24px;
+    font-size: 24px;
     position: absolute;
     left: 24px;
 }
@@ -162,22 +162,23 @@ body {
     content: "\e90a";
 }
 
-@media screen and (min-width:1440px) {
+@media screen and (min-width: 1440px) {
     .menu-lateral {
         position: static;
         width: 200px;
         grid-column: 1;
         grid-row: 1 / span 2;
-    } 
+    }
 }
 
 .principal {
     padding: 24px 16px;
     display: grid;
-    gap:16px;
+    gap: 16px;
 }
+
 .titulo-pagina {
-    font-size: 1.5em;
+    font-size: 1.5rem;
     font-weight: 700;
 }
 
@@ -186,13 +187,24 @@ body {
     font-weight: 700;
 }
 
-@media screen and (min-width: 1440px){
+@media screen and (min-width: 1440px) {
     .principal {
         display: grid;
         grid-template-columns: auto 1fr auto;
+        grid-template-areas: 
+            "titulo-pagina titulo-pagina titulo-pagina"
+            "destaque-video destaque-video videos-recentes"
+            "secao-videos secao-videos secao-videos"
+            "produtos-recentes destaque-produtos destaque-produtos"
+            "secao-produtos secao-produtos secao-produtos"
+        ;
         column-gap: 32px;
         padding: 16px 60px;
         grid-column: 2;
+    }
+
+    .titulo-secao {
+        grid-column: span 4;
     }
 }
 
@@ -203,6 +215,10 @@ body {
     background-color: #2C343A;
 }
 
+.cartao__imagem--desktop {
+    display: none;
+}
+
 .cartao--destaque {
     margin-bottom: 16px;
 }
@@ -210,8 +226,8 @@ body {
 .cartao__conteudo {
     padding: 16px;
     display: grid;
-    grid-template-columns: 1fr 1fr;
-    gap: 8px;    
+    grid-template-columns: auto 1fr;
+    gap: 8px;
 }
 
 .cartao__destaque {
@@ -238,12 +254,12 @@ body {
 
 .cartao__info--tempo::before {
     content: "\e90c";
-    margin-right:8px;
+    margin-right: 8px;    
 }
 
-.cartao__info--vizualizacao::before {
+.cartao__info--visualizacao::before {
     content: "\e90f";
-    margin-right:8px;
+    margin-right: 8px;    
 }
 
 .cartao__botao {
@@ -258,7 +274,7 @@ body {
     justify-self: flex-end;
 }
 
-.cartao__botao--play::before  {
+.cartao__botao--play::before {
     content: "\e90b";
     font-size: 24px;
 }
@@ -277,6 +293,22 @@ body {
 }
 
 @media screen and (min-width: 1440px) {
+    .cartao--destaque {
+        margin-bottom: 0;
+    }
+    .cartao__imagem--mobile {
+        display: none;
+    }
+
+    .cartao__imagem--desktop {
+        display: block;
+    }
+
+    .cartao__botao--destaque {
+        grid-column: auto;
+        padding: 16px 8px;
+    }
+
     .cartao--recentes {
         display: grid;
         grid-template-columns: auto auto;
@@ -285,6 +317,7 @@ body {
         width: 256px;
         padding: 16px;
         box-sizing: border-box;
+        align-self: flex-start;
     }
 
     .cartao--recentes .cartao__titulo {
@@ -297,7 +330,7 @@ body {
         color: #0480DC;
         justify-self: flex-end;
     }
-
+    
     .cartao__lista {
         display: grid;
         row-gap: 16px;
@@ -310,7 +343,7 @@ body {
         gap: 8px;
     }
 
-    .cartao__item--thumbnail {
+    .cartao__item-thumbnail {
         width: 32px;
         grid-row: span 2;
     }
@@ -325,9 +358,39 @@ body {
         font-size: 0.8rem;
         color: #95999C;
     }
-} 
+}
 
 .secao {
     display: grid;
     gap: 16px;
+}
+
+@media screen and (min-width: 1440px) {
+    .secao {
+        grid-template-columns: repeat(4, 1fr);
+    }
+    
+    .destaque-video {
+        grid-area: destaque-video;
+    }
+    
+    .videos-recentes {
+        grid-area: videos-recentes;
+    }
+    
+    .secao-videos {
+         grid-area: secao-videos;
+    }
+    
+    .destaque-produtos {
+        grid-area:destaque-produtos;
+    }
+    
+    .produtos-recentes {
+        grid-area: produtos-recentes;
+    }
+    
+    .secao-produtos {
+        grid-area: secao-produtos;
+    }
 }
